--- a/package.json
+++ b/package.json
@@ -27,14 +27,13 @@
       "last 1 safari version"
     ]
   },
-  "dependencies": {
-    "express": "^4.17.3"
-  },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "express": "^4.18.1",
+    "firebase": "^9.10.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
